<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.auth.AuthFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="28sp"
        android:textColor="@color/megaa_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tvEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/megaa_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/mega_white_50"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_title"
            android:textColor="@color/megaa_white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/mega_white_50"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_text"
        android:textColor="@color/megaa_white"
        android:textSize="14sp"
        android:backgroundTint="@color/green_color"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvNotAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_title"
        android:textColor="@color/megaa_white"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvReg"
        app:layout_constraintEnd_toStartOf="@id/tvReg"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textColor="@color/green_color"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toEndOf="@id/tvNotAc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/forget_password"
        android:textColor="@color/green_color"
        android:textSize="12sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="#4D555E"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForget" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <ImageButton
            android:id="@+id/btnVK"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_vk"
            app:iconTint="@android:color/white"
            android:background="@drawable/btn_background"
            app:backgroundTint="@color/vk"/>

        <ImageButton
            android:id="@+id/btnOk"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ok"
            app:iconTint="@android:color/white"
            android:background="@drawable/btn_background"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>