<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/dark_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icCourse"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@drawable/rounded_rating_date_background"
        android:backgroundTint="@color/megaa_white"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnBookmark"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_bookmark"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintTop_toTopOf="@id/icCourse"
        app:layout_constraintEnd_toEndOf="@id/icCourse"
        tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_rating_date_background"
            android:drawablePadding="4dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/rating"
            android:textColor="@color/megaa_white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/icCourse"
            app:layout_constraintStart_toStartOf="@id/icCourse" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_rating_date_background"
            android:drawablePadding="4dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/date"
            android:textColor="@color/megaa_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/icCourse"
            app:layout_constraintStart_toEndOf="@+id/tvRate" />

    <TextView
        android:id="@+id/tvCourseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="@color/megaa_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/icCourse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCourseDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/desc"
        android:textColor="#B3FFFFFF"
        android:textSize="12sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tvCourseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCoursePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/price"
        android:textColor="@color/megaa_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvCourseDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/pod"
        android:textColor="@color/green_color"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvCoursePrice"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>