<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.home.courses.CoursesFragment">


    <com.google.android.material.search.SearchBar
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_marginTop="56dp"
        android:theme="@style/CustomSearchBarTheme"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_filter"
        android:hint="@string/search_courses"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btnFilter"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_filter"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_filter_list_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent" />\

    <ImageView
        android:id="@+id/icConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_signal_wifi_statusbar_connected_no_internet_4_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sort"
        android:textColor="@color/green_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rsCourses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSort"
        tools:listitem="@layout/item_course" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupContent"
        app:constraint_referenced_ids="searchBar,btnFilter,icConnection,tvSort,rsCourses" />


    <ProgressBar
        android:id="@+id/pbCourses"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icError"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_outline_error_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvError"
        android:text="@string/error"
        android:textColor="@color/design_default_color_error"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icError"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupError"
        app:constraint_referenced_ids="icError,tvError" />



</androidx.constraintlayout.widget.ConstraintLayout>